--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <div class="container">
-            <h1><strong>CRYSTAL COLLECTORS!</strong></h1>
+            <h1 class="heading">CRYSTAL COLLECTORS!</h1>
             
                 <section class="main-section">
                         <p> You will be given a random number at the start of the game.</p>
