changed crystals images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <div class="container">
-            <h1 class="heading">CRYSTAL COLLECTORS!</h1>
+            <h1 class="heading"><strong>CRYSTAL COLLECTORS!</strong></h1>
             
                 <section class="main-section">
                         <p> You will be given a random number at the start of the game.</p>
@@ -19,14 +19,14 @@
                 </section>
 
              <div class="button-container">
-		                <input type="image" src="assets/images/blue.png" class="crystal" id="blue">
-		                <input type="image" src="assets/images/green.jpg" class="crystal" id="green">
-		                <input type="image" src="assets/images/pink.png" class="crystal" id="red">
-		                <input type="image" src="assets/images/yellow.jpg" class="crystal" id="yellow">
+		                <input type="image" src="assets/images/blue.jpg" class="crystal" id="blue">
+		                <input type="image" src="assets/images/orange.png" class="crystal" id="green">
+		                <input type="image" src="assets/images/pink.jpg" class="crystal" id="red">
+		                <input type="image" src="assets/images/purple.png" class="crystal" id="yellow">
 		     </div>
 
             <div class="targetScore">
-                <p>Target Score</p>
+                <h3><strong>Target Score</strong></h3>
                 <p id="result"></p>
             </div>
 
